- Changing grammar context click handler on popup contents to be on the individual linked elements rather than the entire alph-entry block, in order to better handle elements which are wrapped inside other elements correctly (e.g. the alph-pofs span in the alph-infl-set block) - adding hint text at the top of the paradigm display - cleaning up spacing on popup icons - cleaning up spacing/fonts at the top of the inflection display - switching abbreviations for male female and neuter in the inflection displays to the fully spelled out words

--- a/basic-reader/trunk/skin/alph-infl.css
+++ b/basic-reader/trunk/skin/alph-infl.css
@@ -47,6 +47,7 @@ div#alph-infl-index-link:hover {
 #infl-links {
     display: none; 
     padding: 2px;
+    margin: 1em;
 }
 
 #infl-links-label {
@@ -291,6 +292,10 @@ th.reloading {
     display: inline;
 }
 
+.alph-infl-form {
+    font-weight: bold;
+}
+
 .footnote-text ul, .footnote-text li {
     text-align: left;
 }
@@ -317,4 +322,10 @@ th.reloading {
 .paradigm-nomatch {
     margin-left: 2em;
     margin-top: 1em;
+}
+
+.alpheios-hint {
+    color: #4E6476;
+    font-style: italic;
+    margin-bottom: 1em;
 }
